Changed styling for image

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ a {
 .main-nav {
     margin-bottom: 16px;
 }
-
-.figure-caption{
-    color: whitesmoke
+figcaption{
+    color: whitesmoke;
+    text-align: center;
 }
