Add to iot page, Add three images, Add to styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,11 @@ figcaption{
 .figure-caption{
     color: whitesmoke;
 }
+
+.align-left{
+    text-align: left;
+}
+
+.align-right{
+    text-align: right;
+}
