--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #00445f !important;
     
 }
-h1, h2, ul, li, p, h3, figcaption {
+h1, h2, ul, li, p, h3, h4, h5, h6, figcaption {
     color: rgb(233, 233, 233);
     font-family: "Montserrat";
 }
